--- a/src/@core/scss/base/bootstrap-extended/_forms.scss
+++ b/src/@core/scss/base/bootstrap-extended/_forms.scss
@@ -605,3 +605,497 @@ select:-webkit-autofill {
   -webkit-box-shadow: 0 0 0 1000px $white inset !important;
   -webkit-text-fill-color: $body-color !important;
 }
+
+.input-group {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  width: 100%
+}
+
+.input-group>.custom-file,.input-group>.custom-select,.input-group>.form-control,.input-group>.form-control-plaintext {
+  position: relative;
+  flex: 1 1 auto;
+  width: 1%;
+  min-width: 0;
+  margin-bottom: 0
+}
+
+.input-group>.custom-file+.custom-file,.input-group>.custom-file+.custom-select,.input-group>.custom-file+.form-control,.input-group>.custom-select+.custom-file,.input-group>.custom-select+.custom-select,.input-group>.custom-select+.form-control,.input-group>.form-control+.custom-file,.input-group>.form-control+.custom-select,.input-group>.form-control+.form-control,.input-group>.form-control-plaintext+.custom-file,.input-group>.form-control-plaintext+.custom-select,.input-group>.form-control-plaintext+.form-control {
+  margin-left: -1px
+}
+
+.input-group>.custom-file .custom-file-input:focus~.custom-file-label,.input-group>.custom-select:focus,.input-group>.form-control:focus {
+  z-index: 3
+}
+
+.input-group>.custom-file .custom-file-input:focus {
+  z-index: 4
+}
+
+.input-group>.custom-select:not(:first-child),.input-group>.form-control:not(:first-child) {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0
+}
+
+.input-group>.custom-file {
+  display: flex;
+  align-items: center
+}
+
+.input-group>.custom-file:not(:first-child) .custom-file-label,.input-group>.custom-file:not(:last-child) .custom-file-label {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0
+}
+
+.input-group.has-validation>.custom-file:nth-last-child(n+3) .custom-file-label:after,.input-group.has-validation>.custom-select:nth-last-child(n+3),.input-group.has-validation>.form-control:nth-last-child(n+3),.input-group:not(.has-validation)>.custom-file:not(:last-child) .custom-file-label:after,.input-group:not(.has-validation)>.custom-select:not(:last-child),.input-group:not(.has-validation)>.form-control:not(:last-child) {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0
+}
+
+.input-group-append,.input-group-prepend {
+  display: flex
+}
+
+.input-group-append .btn,.input-group-prepend .btn {
+  position: relative;
+  z-index: 2
+}
+
+.input-group-append .btn:focus,.input-group-prepend .btn:focus {
+  z-index: 3
+}
+
+.input-group-append .btn+.btn,.input-group-append .btn+.input-group-text,.input-group-append .input-group-text+.btn,.input-group-append .input-group-text+.input-group-text,.input-group-prepend .btn+.btn,.input-group-prepend .btn+.input-group-text,.input-group-prepend .input-group-text+.btn,.input-group-prepend .input-group-text+.input-group-text {
+  margin-left: -1px
+}
+
+.input-group-prepend {
+  margin-right: -1px
+}
+
+.input-group-append {
+  margin-left: -1px
+}
+
+.input-group-text {
+  display: flex;
+  align-items: center;
+  padding: .438rem 1rem;
+  margin-bottom: 0;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.45;
+  color: #6e6b7b;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #fff;
+  border: 1px solid #d8d6de;
+  border-radius: .357rem
+}
+
+.input-group-text input[type=checkbox],.input-group-text input[type=radio] {
+  margin-top: 0
+}
+
+.input-group-lg>.custom-select,.input-group-lg>.form-control:not(textarea) {
+  height: 3.2857rem
+}
+
+.input-group-lg>.custom-select,.input-group-lg>.form-control,.input-group-lg>.input-group-append>.btn,.input-group-lg>.input-group-append>.input-group-text,.input-group-lg>.input-group-prepend>.btn,.input-group-lg>.input-group-prepend>.input-group-text {
+  padding: .75rem 1.143rem;
+  font-size: 1.143rem;
+  line-height: 1.25;
+  border-radius: .357rem
+}
+
+.input-group-sm>.custom-select,.input-group-sm>.form-control:not(textarea) {
+  height: 2.142rem
+}
+
+.input-group-sm>.custom-select,.input-group-sm>.form-control,.input-group-sm>.input-group-append>.btn,.input-group-sm>.input-group-append>.input-group-text,.input-group-sm>.input-group-prepend>.btn,.input-group-sm>.input-group-prepend>.input-group-text {
+  padding: .188rem .857rem;
+  font-size: .857rem;
+  line-height: 1;
+  border-radius: .357rem
+}
+
+.input-group-lg>.custom-select,.input-group-sm>.custom-select {
+  padding-right: 2rem
+}
+
+.input-group.has-validation>.input-group-append:nth-last-child(n+3)>.btn,.input-group.has-validation>.input-group-append:nth-last-child(n+3)>.input-group-text,.input-group:not(.has-validation)>.input-group-append:not(:last-child)>.btn,.input-group:not(.has-validation)>.input-group-append:not(:last-child)>.input-group-text,.input-group>.input-group-append:last-child>.btn:not(:last-child):not(.dropdown-toggle),.input-group>.input-group-append:last-child>.input-group-text:not(:last-child),.input-group>.input-group-prepend>.btn,.input-group>.input-group-prepend>.input-group-text {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0
+}
+
+.input-group>.input-group-append>.btn,.input-group>.input-group-append>.input-group-text,.input-group>.input-group-prepend:first-child>.btn:not(:first-child),.input-group>.input-group-prepend:first-child>.input-group-text:not(:first-child),.input-group>.input-group-prepend:not(:first-child)>.btn,.input-group>.input-group-prepend:not(:first-child)>.input-group-text {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0
+}
+
+.custom-control {
+  position: relative;
+  z-index: 1;
+  display: block;
+  min-height: 1.45rem;
+  padding-left: 1.5rem;
+  -webkit-print-color-adjust: exact;
+  color-adjust: exact
+}
+
+.custom-control-inline {
+  display: inline-flex;
+  margin-right: 1rem
+}
+
+.custom-control-input {
+  position: absolute;
+  left: 0;
+  z-index: -1;
+  width: 1rem;
+  height: 1.225rem;
+  opacity: 0
+}
+
+.custom-control-input:checked~.custom-control-label:before {
+  color: #fff;
+  border-color: #7367f0;
+  background-color: #7367f0
+}
+
+.custom-control-input:focus~.custom-control-label:before {
+  box-shadow: 0 3px 10px 0 rgba(34,41,47,.1)
+}
+
+.custom-control-input:focus:not(:checked)~.custom-control-label:before {
+  border-color: #7367f0
+}
+
+.custom-control-input:not(:disabled):active~.custom-control-label:before {
+  color: #fff;
+  background-color: #fff;
+  border-color: #fff
+}
+
+.custom-control-input:disabled~.custom-control-label,.custom-control-input[disabled]~.custom-control-label {
+  color: #b8c2cc
+}
+
+.custom-control-input:disabled~.custom-control-label:before,.custom-control-input[disabled]~.custom-control-label:before {
+  background-color: #efefef
+}
+
+.custom-control-label {
+  position: relative;
+  margin-bottom: 0;
+  vertical-align: top
+}
+
+.custom-control-label:before {
+  pointer-events: none;
+  background-color: #fff;
+  border: 1px solid #d8d6de
+}
+
+.custom-control-label:after,.custom-control-label:before {
+  position: absolute;
+  top: .225rem;
+  left: -1.5rem;
+  display: block;
+  width: 1rem;
+  height: 1rem;
+  content: ""
+}
+
+.custom-control-label:after {
+  background: 50%/50% 50% no-repeat
+}
+
+.custom-checkbox .custom-control-label:before {
+  border-radius: 3px
+}
+
+.custom-checkbox .custom-control-input:checked~.custom-control-label:after {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 9.5 7.5'%3E%3Cpolyline points='0.75 4.35 4.18 6.75 8.75 0.75' style='fill:none;stroke:%23fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:1.5px'/%3E%3C/svg%3E")
+}
+
+.custom-checkbox .custom-control-input:indeterminate~.custom-control-label:before {
+  border-color: #7367f0;
+  background-color: #7367f0
+}
+
+.custom-checkbox .custom-control-input:indeterminate~.custom-control-label:after {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-minus'%3E%3Cline x1='5' y1='12' x2='19' y2='12'%3E%3C/line%3E%3C/svg%3E")
+}
+
+.custom-checkbox .custom-control-input:disabled:checked~.custom-control-label:before {
+  background-color: rgba(115,103,240,.65)
+}
+
+.custom-checkbox .custom-control-input:disabled:indeterminate~.custom-control-label:before {
+  background-color: rgba(115,103,240,.65)
+}
+
+.custom-radio .custom-control-label:before {
+  border-radius: 50%
+}
+
+.custom-radio .custom-control-input:checked~.custom-control-label:after {
+  background-image: none
+}
+
+.custom-radio .custom-control-input:disabled:checked~.custom-control-label:before {
+  background-color: rgba(115,103,240,.65)
+}
+
+.custom-switch {
+  padding-left: 3.5rem
+}
+
+.custom-switch .custom-control-label:before {
+  left: -3.5rem;
+  width: 3rem;
+  pointer-events: all;
+  border-radius: 1rem
+}
+
+.custom-switch .custom-control-label:after {
+  top: calc(.225rem + 2px);
+  left: calc(-3.5rem + 2px);
+  width: 1rem;
+  height: 1rem;
+  background-color: #d8d6de;
+  border-radius: 1rem;
+  transition: transform .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out,background 0s,border-color 0s
+}
+
+@media (prefers-reduced-motion:reduce) {
+  .custom-switch .custom-control-label:after {
+    transition: none
+  }
+}
+
+.custom-switch .custom-control-input:checked~.custom-control-label:after {
+  background-color: #fff;
+  transform: translateX(2rem)
+}
+
+.custom-switch .custom-control-input:disabled:checked~.custom-control-label:before {
+  background-color: rgba(115,103,240,.65)
+}
+
+.custom-select {
+  display: inline-block;
+  width: 100%;
+  height: 2.714rem;
+  padding: .438rem 2rem .438rem 1rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.45;
+  color: #6e6b7b;
+  vertical-align: middle;
+  background: #fff url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23d8d6de' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") right 1rem center/10px 10px no-repeat;
+  border: 1px solid #d8d6de;
+  border-radius: .357rem;
+  appearance: none
+}
+
+.custom-select:focus {
+  border-color: #7367f0;
+  outline: 0;
+  box-shadow: 0 3px 10px 0 rgba(34,41,47,.1)
+}
+
+.custom-select:focus::-ms-value {
+  color: #6e6b7b;
+  background-color: #fff
+}
+
+.custom-select[multiple],.custom-select[size]:not([size="1"]) {
+  height: auto;
+  padding-right: 1rem;
+  background-image: none
+}
+
+.custom-select:disabled {
+  color: #b8c2cc;
+  background-color: #efefef
+}
+
+.custom-select::-ms-expand {
+  display: none
+}
+
+.custom-select:-moz-focusring {
+  color: transparent;
+  text-shadow: 0 0 0 #6e6b7b
+}
+
+.custom-select-sm {
+  height: 2.142rem;
+  padding-top: .188rem;
+  padding-bottom: .188rem;
+  padding-left: .857rem;
+  font-size: .857rem
+}
+
+.custom-select-lg {
+  height: 3.2857rem;
+  padding-top: .75rem;
+  padding-bottom: .75rem;
+  padding-left: 1.143rem;
+  font-size: 1.143rem
+}
+
+.custom-file {
+  display: inline-block;
+  margin-bottom: 0
+}
+
+.custom-file,.custom-file-input {
+  position: relative;
+  width: 100%;
+  height: 2.714rem
+}
+
+.custom-file-input {
+  z-index: 2;
+  margin: 0;
+  overflow: hidden;
+  opacity: 0
+}
+
+.custom-file-input:focus~.custom-file-label {
+  border-color: var(--primary);
+  box-shadow: 0 3px 10px 0 rgba(34,41,47,.1)
+}
+
+.custom-file-input:disabled~.custom-file-label,.custom-file-input[disabled]~.custom-file-label {
+  background-color: #efefef
+}
+
+.custom-file-input:lang(en)~.custom-file-label:after {
+  content: "Browse"
+}
+
+.custom-file-input~.custom-file-label[data-browse]:after {
+  content: attr(data-browse)
+}
+
+.custom-file-label {
+  left: 0;
+  z-index: 1;
+  overflow: hidden;
+  font-weight: 400;
+  border: 1px solid #d8d6de;
+  border-radius: .357rem
+}
+
+.custom-file-label,.custom-file-label:after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 2.714rem;
+  padding: .438rem 1rem;
+  line-height: 1.45;
+  color: #6e6b7b;
+  background-color: #fff
+}
+
+.btn-group,.btn-group-vertical {
+  position: relative;
+  display: inline-flex;
+  vertical-align: middle
+}
+
+.btn-group-vertical>.btn,.btn-group>.btn {
+  position: relative;
+  flex: 1 1 auto
+}
+
+.btn-group-vertical>.btn.active,.btn-group-vertical>.btn:active,.btn-group-vertical>.btn:focus,.btn-group-vertical>.btn:hover,.btn-group>.btn.active,.btn-group>.btn:active,.btn-group>.btn:focus,.btn-group>.btn:hover {
+  z-index: 1
+}
+
+.btn-toolbar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start
+}
+
+.btn-toolbar .input-group {
+  width: auto
+}
+
+.btn-group>.btn-group:not(:first-child),.btn-group>.btn:not(:first-child) {
+  margin-left: -1px
+}
+
+.btn-group>.btn-group:not(:last-child)>.btn,.btn-group>.btn:not(:last-child):not(.dropdown-toggle) {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0
+}
+
+.btn-group>.btn-group:not(:first-child)>.btn,.btn-group>.btn:not(:first-child) {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0
+}
+
+.dropdown-toggle-split {
+  padding-right: 1.125rem;
+  padding-left: 1.125rem
+}
+
+.dropdown-toggle-split:after,.dropright .dropdown-toggle-split:after,.dropup .dropdown-toggle-split:after {
+  margin-left: 0
+}
+
+.dropleft .dropdown-toggle-split:before {
+  margin-right: 0
+}
+
+.btn-group-sm>.btn+.dropdown-toggle-split,.btn-sm+.dropdown-toggle-split {
+  padding-right: .75rem;
+  padding-left: .75rem
+}
+
+.btn-group-lg>.btn+.dropdown-toggle-split,.btn-lg+.dropdown-toggle-split {
+  padding-right: 1.5rem;
+  padding-left: 1.5rem
+}
+
+.btn-group-vertical {
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center
+}
+
+.btn-group-vertical>.btn,.btn-group-vertical>.btn-group {
+  width: 100%
+}
+
+.btn-group-vertical>.btn-group:not(:first-child),.btn-group-vertical>.btn:not(:first-child) {
+  margin-top: -1px
+}
+
+.btn-group-vertical>.btn-group:not(:last-child)>.btn,.btn-group-vertical>.btn:not(:last-child):not(.dropdown-toggle) {
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0
+}
+
+.btn-group-vertical>.btn-group:not(:first-child)>.btn,.btn-group-vertical>.btn:not(:first-child) {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0
+}
+
+.btn-group-toggle>.btn,.btn-group-toggle>.btn-group>.btn {
+  margin-bottom: 0
+}
+
+.btn-group-toggle>.btn-group>.btn input[type=checkbox],.btn-group-toggle>.btn-group>.btn input[type=radio],.btn-group-toggle>.btn input[type=checkbox],.btn-group-toggle>.btn input[type=radio] {
+  position: absolute;
+  clip: rect(0,0,0,0);
+  pointer-events: none
+}
