--- a/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.scss
+++ b/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.scss
@@ -14,7 +14,7 @@
 
   .header {
     display: flex;
-    justify-content: start;
+    justify-content: space-between;
     align-items: center;
     margin-left: 1.2rem;
     margin-bottom: 2rem;
