--- a/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.html
+++ b/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.html
@@ -11,7 +11,8 @@
       </div>
 
       <ng-select
-        style="width: 200px;"
+        [ngClass.lt-md]="'d-none'"
+        style="width: 300px;"
         placeholder="{{ 'ALL' | translate }}"
         [items]="contestFilters"
         bindLabel="name"
