resolve path urls

--- a/src/assets/scss/_switcher.scss
+++ b/src/assets/scss/_switcher.scss
@@ -923,7 +923,7 @@
 //bg-img1 start
 [data-bg-img="bgimg1"][data-theme-mode="dark"] {
   .app-sidebar {
-    background-image: url(/assets/images/menu-bg-images/bg-img1.jpg);
+    background-image: url(../../assets/images/menu-bg-images/bg-img1.jpg);
   }
 
   @extend .bg-img;
@@ -934,7 +934,7 @@
 //bg-img2 start
 [data-bg-img="bgimg2"][data-theme-mode="dark"] {
   .app-sidebar {
-    background-image: url(/assets/images/menu-bg-images/bg-img2.jpg);
+    background-image: url(../../assets/images/menu-bg-images/bg-img2.jpg);
   }
 
   @extend .bg-img;
@@ -945,7 +945,7 @@
 //bg-img3 start
 [data-bg-img="bgimg3"][data-theme-mode="dark"] {
   .app-sidebar {
-    background-image: url(/assets/images/menu-bg-images/bg-img3.jpg);
+    background-image: url(../../assets/images/menu-bg-images/bg-img3.jpg);
   }
 
   @extend .bg-img;
@@ -956,7 +956,7 @@
 //bg-img4 start
 [data-bg-img="bgimg4"][data-theme-mode="dark"] {
   .app-sidebar {
-    background-image: url(/assets/images/menu-bg-images/bg-img4.jpg);
+    background-image: url(../../assets/images/menu-bg-images/bg-img4.jpg);
   }
 
   @extend .bg-img;
@@ -967,7 +967,7 @@
 //bg-img5 start
 [data-bg-img="bgimg5"][data-theme-mode="dark"] {
   .app-sidebar {
-    background-image: url(/assets/images/menu-bg-images/bg-img5.jpg);
+    background-image: url(../../assets/images/menu-bg-images/bg-img5.jpg);
   }
 
   @extend .bg-img;
@@ -996,70 +996,70 @@
 
 // bg-pattern1 start
 [data-pattern-img="bgpattern1"] {
-  --bg-pattern: url(/assets/images/media/Patterns/p1.png);
+  --bg-pattern: url(../../assets/images/media/Patterns/p1.png);
 }
 
 // bg-pattern1 end
 
 // bg-pattern2 start
 [data-pattern-img="bgpattern2"] {
-  --bg-pattern: url(/assets/images/media/Patterns/p2.png);
+  --bg-pattern: url(../../assets/images/media/Patterns/p2.png);
 }
 
 // bg-pattern2 end
 
 // bg-pattern3 start
 [data-pattern-img="bgpattern3"] {
-  --bg-pattern: url(/assets/images/media/Patterns/p3.svg);
+  --bg-pattern: url(../../assets/images/media/Patterns/p3.svg);
 }
 
 // bg-pattern3 end
 
 // bg-pattern4 start
 [data-pattern-img="bgpattern4"] {
-  --bg-pattern: url(/assets/images/media/Patterns/p4.svg);
+  --bg-pattern: url(../../assets/images/media/Patterns/p4.svg);
 }
 
 // bg-pattern4 end
 
 // bg-pattern5 start
 [data-pattern-img="bgpattern5"] {
-  --bg-pattern: url(/assets/images/media/Patterns/p5.png);
+  --bg-pattern: url(../../assets/images/media/Patterns/p5.png);
 }
 
 // bg-pattern5 end
 
 // bg-pattern6 start
 [data-pattern-img="bgpattern6"] {
-  --bg-pattern: url(/assets/images/media/Patterns/p6.svg);
+  --bg-pattern: url(../../assets/images/media/Patterns/p6.svg);
 }
 
 // bg-pattern6 end
 
 // bg-pattern7 start
 [data-pattern-img="bgpattern7"] {
-  --bg-pattern: url(/assets/images/media/Patterns/p7.png);
+  --bg-pattern: url(../../assets/images/media/Patterns/p7.png);
 }
 
 // bg-pattern7 end
 
 // bg-pattern8 start
 [data-pattern-img="bgpattern8"] {
-  --bg-pattern: url(/assets/images/media/Patterns/p8.svg);
+  --bg-pattern: url(../../assets/images/media/Patterns/p8.svg);
 }
 
 // bg-pattern8 end
 
 // bg-pattern9 start
 [data-pattern-img="bgpattern9"] {
-  --bg-pattern: url(/assets/images/media/Patterns/p9.png);
+  --bg-pattern: url(../../assets/images/media/Patterns/p9.png);
 }
 
 // bg-pattern9 end
 
 // bg-pattern10 start
 [data-pattern-img="bgpattern10"] {
-  --bg-pattern: url(/assets/images/media/Patterns/p10.png);
+  --bg-pattern: url(../../assets/images/media/Patterns/p10.png);
 }
 
 // bg-pattern10 end
