--- a/src/assets/scss/custom/_custom.scss
+++ b/src/assets/scss/custom/_custom.scss
@@ -518,7 +518,7 @@ button {
     border: 0;
 
     &.bg-img1 {
-      background-image: url(/assets/images/menu-bg-images/bg-img1.jpg) !important;
+      background-image: url(../../../assets/images/menu-bg-images/bg-img1.jpg) !important;
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat;
@@ -529,7 +529,7 @@ button {
     }
 
     &.bg-img2 {
-      background-image: url(/assets/images/menu-bg-images/bg-img2.jpg) !important;
+      background-image: url(../../../assets/images/menu-bg-images/bg-img2.jpg) !important;
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat;
@@ -540,7 +540,7 @@ button {
     }
 
     &.bg-img3 {
-      background-image: url(/assets/images/menu-bg-images/bg-img3.jpg) !important;
+      background-image: url(../../../assets/images/menu-bg-images/bg-img3.jpg) !important;
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat;
@@ -551,7 +551,7 @@ button {
     }
 
     &.bg-img4 {
-      background-image: url(/assets/images/menu-bg-images/bg-img4.jpg) !important;
+      background-image: url(../../../assets/images/menu-bg-images/bg-img4.jpg) !important;
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat;
@@ -562,7 +562,7 @@ button {
     }
 
     &.bg-img5 {
-      background-image: url(/assets/images/menu-bg-images/bg-img5.jpg) !important;
+      background-image: url(../../../assets/images/menu-bg-images/bg-img5.jpg) !important;
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat;
@@ -603,7 +603,7 @@ button {
     border: 0;
 
     &.bg-pattern1 {
-      background-image: url(/assets/images/media/Patterns/p1.png) !important;
+      background-image: url(../../../assets/images/media/Patterns/p1.png) !important;
       background-position: center;
       background-repeat: repeat;
       border: 2px solid rgba(255, 255, 255, 0.1);
@@ -623,7 +623,7 @@ button {
     }
 
     &.bg-pattern2 {
-      background-image: url(/assets/images/media/Patterns/p2.png) !important;
+      background-image: url(../../../assets/images/media/Patterns/p2.png) !important;
       background-position: center;
       background-repeat: repeat;
       border: 2px solid rgba(255, 255, 255, 0.1);
@@ -643,7 +643,7 @@ button {
     }
 
     &.bg-pattern3 {
-      background-image: url(/assets/images/media/Patterns/p3.svg) !important;
+      background-image: url(../../../assets/images/media/Patterns/p3.svg) !important;
       background-position: center;
       background-repeat: repeat;
       border: 2px solid rgba(255, 255, 255, 0.1);
@@ -663,7 +663,7 @@ button {
     }
 
     &.bg-pattern4 {
-      background-image: url(/assets/images/media/Patterns/p4.svg) !important;
+      background-image: url(../../../assets/images/media/Patterns/p4.svg) !important;
       background-position: center;
       background-repeat: repeat;
       border: 2px solid rgba(255, 255, 255, 0.1);
@@ -683,7 +683,7 @@ button {
     }
 
     &.bg-pattern5 {
-      background-image: url(/assets/images/media/Patterns/p5.png) !important;
+      background-image: url(../../../assets/images/media/Patterns/p5.png) !important;
       background-position: center;
       border: 2px solid rgba(255, 255, 255, 0.1);
       background-repeat: repeat;
@@ -703,7 +703,7 @@ button {
     }
 
     &.bg-pattern6 {
-      background-image: url(/assets/images/media/Patterns/p6.svg) !important;
+      background-image: url(../../../assets/images/media/Patterns/p6.svg) !important;
       background-position: center;
       border: 2px solid rgba(255, 255, 255, 0.1);
       background-repeat: repeat;
@@ -723,7 +723,7 @@ button {
     }
 
     &.bg-pattern7 {
-      background-image: url(/assets/images/media/Patterns/p7.png) !important;
+      background-image: url(../../../assets/images/media/Patterns/p7.png) !important;
       background-position: center;
       border: 2px solid rgba(255, 255, 255, 0.1);
       background-repeat: repeat;
@@ -743,7 +743,7 @@ button {
     }
 
     &.bg-pattern8 {
-      background-image: url(/assets/images/media/Patterns/p8.svg) !important;
+      background-image: url(../../../assets/images/media/Patterns/p8.svg) !important;
       background-position: center;
       border: 2px solid rgba(255, 255, 255, 0.1);
       background-repeat: repeat;
@@ -763,7 +763,7 @@ button {
     }
 
     &.bg-pattern9 {
-      background-image: url(/assets/images/media/Patterns/p9.png) !important;
+      background-image: url(../../../assets/images/media/Patterns/p9.png) !important;
       background-position: center;
       border: 2px solid rgba(255, 255, 255, 0.1);
       background-repeat: repeat;
@@ -783,7 +783,7 @@ button {
     }
 
     &.bg-pattern10 {
-      background-image: url(/assets/images/media/Patterns/p10.png) !important;
+      background-image: url(../../../assets/images/media/Patterns/p10.png) !important;
       background-position: center;
       border: 2px solid rgba(255, 255, 255, 0.1);
       background-repeat: repeat;
