rename logo filename

--- a/src/@core/components/sidebar/sidebar.component.html
+++ b/src/@core/components/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
   <!-- Start::main-sidebar-header -->
   <div class="main-sidebar-header">
     <a [routerLink]="''" class="header-logo">
-      <img alt="logo" class="desktop-dark" src="assets/images/logo/logo.svg">
+      <img alt="logo" class="desktop-dark" src="assets/images/logo/new-logo.svg">
     </a>
   </div>
   <!-- End::main-sidebar-header -->
