--- a/src/app/modules/arena/components/arena-card/arena-card.component.html
+++ b/src/app/modules/arena/components/arena-card/arena-card.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-header">
     <div class="d-flex justify-content-between">
-      <img alt="" height="32" src="assets/images/logo/logo.svg">
+      <img alt="" height="32" src="assets/images/logo/new-logo.svg">
       <h5 class="ms-75 text-white mt-2 mb-2 text-dark font-medium-1">KEP.uz</h5>
     </div>
     <div>
