--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -5,7 +5,7 @@
         <div class="card-body p-5">
           <div class="mb-3 d-flex justify-content-center">
             <div class="d-flex justify-content-between gap-2">
-              <img alt="" height="32" src="assets/images/logo/logo.svg">
+              <img alt="" height="32" src="assets/images/logo/new-logo.svg">
               <h3 class="fw-bold text-fixed-white">KEP.uz</h3>
             </div>
           </div>
