--- a/src/app/shared/components/attempt-language/attempt-language.component.scss
+++ b/src/app/shared/components/attempt-language/attempt-language.component.scss
@@ -1,6 +1,7 @@
 @import 'styles/kep-imports';
 
 button {
+  text-wrap: nowrap;
   padding: 0.5rem 0.65rem;
   width: 100%;
   margin-bottom: 0.5rem;
