--- a/src/app/modules/contests/pages/contest/contest-og-image/contest-og-image.component.html
+++ b/src/app/modules/contests/pages/contest/contest-og-image/contest-og-image.component.html
@@ -3,7 +3,7 @@
     <a class="card-header">
       <div class="d-flex justify-content-between">
         <div class="d-flex justify-content-between">
-          <img src="assets/images/logo/logo.svg" height="32" alt="">
+          <img src="assets/images/logo/new-logo.svg" height="32" alt="">
           <h5 class="ms-2 mt-1 mb-2 fw-bold text-fixed-white">KEP.uz</h5>
         </div>
         <div>
