--- a/src/app/modules/landing-page/navbar/navbar.component.html
+++ b/src/app/modules/landing-page/navbar/navbar.component.html
@@ -7,7 +7,7 @@
             <christmas-tree/>
 
             <span class="brand-logo">
-              <img alt="brand-logo" height="36" src="assets/images/logo/logo.svg" width="48"/>
+              <img alt="brand-logo" height="36" src="assets/images/logo/new-logo.svg" width="48"/>
             </span>
             <h2 class="brand-text text-dark ms-1 fw-medium mb-0">KEP.uz</h2>
           </div>
