--- a/src/app/modules/landing-page/sections/section-header/section-header.component.html
+++ b/src/app/modules/landing-page/sections/section-header/section-header.component.html
@@ -1,5 +1,5 @@
 <div class="page-top">
-  <div class="bg-img" style="background-image: url('/assets/images/logo/logo.svg');"></div>
+  <div class="bg-img" style="background-image: url('/src/assets/images/logo/new-logo.svg');"></div>
   <div class="content-wrapper container-sm p-0">
     <div class="content-body text-center">
       <h1 class="section-title">{{ 'LandingPage.SectionTopTitle' | translate }}</h1>
@@ -12,7 +12,7 @@
         height="350"
         width="350"
         alt="landing-img"
-        src="assets/images/logo/logo.svg"/>
+        src="assets/images/logo/new-logo.svg"/>
     </div>
   </div>
 </div>
