i18n fix | ranks-section

--- a/src/app/modules/home/ranks-section/ranks-section.component.html
+++ b/src/app/modules/home/ranks-section/ranks-section.component.html
@@ -46,7 +46,7 @@
     </div>
 
     <ng-template #informationTooltip>
-      {{ ('Home.RankInformation.' + rank.title) | translate }}
+      {{ ('Home.RankInformation.' + rank.name) | translate }}
     </ng-template>
 
     <ng-template #rankInformationTooltip>
