--- a/src/app/modules/account-settings/change-password/change-password.component.html
+++ b/src/app/modules/account-settings/change-password/change-password.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<kep-card>
   <div class="card-body">
     <div class="row">
       <div class="col-12 col-sm-6">
@@ -70,4 +70,4 @@
       </div>
     </div>
   </div>
-</div>
+</kep-card>
