--- a/src/app/modules/account-settings/system/system.component.html
+++ b/src/app/modules/account-settings/system/system.component.html
@@ -1,8 +1,8 @@
-<div class="card">
+<kep-card>
   <div class="card-body">
     <div class="d-flex align-items-center mb-2">
       <i class="font-medium-3" data-feather="settings"></i>
-      <h4 class="mb-0 ms-75">System</h4>
+      <h4 class="mb-0 ms-2">System</h4>
     </div>
 
     <div class="sounds">
@@ -49,7 +49,7 @@
 <!--      </div>-->
 <!--    </div>-->
   </div>
-</div>
+</kep-card>
 
 <ng-select-css></ng-select-css>
 
