--- a/src/app/modules/landing-page/navbar/navbar.component.html
+++ b/src/app/modules/landing-page/navbar/navbar.component.html
@@ -14,27 +14,27 @@
 
           <div class="navbar-menu d-lg-flex d-none">
             <div class="nav-item">
-              <a href="#section-header" (click)="scrollTo('section-header')" class="nav-link text-dark">
+              <a (click)="scrollTo('section-header')" class="nav-link text-dark">
                 {{ 'MENU.HOME' | translate }}
               </a>
             </div>
             <div class="nav-item">
-              <a href="#section-features" (click)="scrollTo('section-features')" class="nav-link text-dark">
+              <a (click)="scrollTo('section-features')" class="nav-link text-dark">
                 {{ 'Features' | translate }}
               </a>
             </div>
             <div class="nav-item">
-              <a href="#section-reviews" (click)="scrollTo('section-reviews')" class="nav-link text-dark">
+              <a (click)="scrollTo('section-reviews')" class="nav-link text-dark">
                 {{ 'Reviews' | translate }}
               </a>
             </div>
             <div class="nav-item">
-              <a href="#section-faq" (click)="scrollTo('section-faq')" class="nav-link text-dark">
+              <a (click)="scrollTo('section-faq')" class="nav-link text-dark">
                 {{ 'FAQ' | translate }}
               </a>
             </div>
             <div class="nav-item">
-              <a href="#section-contact-us" (click)="scrollTo('section-contact-us')" class="nav-link text-dark">
+              <a (click)="scrollTo('section-contact-us')" class="nav-link text-dark">
                 {{ 'ContactUs' | translate }}
               </a>
             </div>
