--- a/src/app/modules/problems/pages/problem/problem.component.html
+++ b/src/app/modules/problems/pages/problem/problem.component.html
@@ -136,7 +136,7 @@
           [problem]="problem"
           [answerForInputEnabled]="problem.hasSolution && problem.hasCheckInput"
           [availableLanguages]="problem.availableLanguages"
-          (submittedEvent)="submitEvent.next(null);activeId=2;"></code-editor-modal>
+          (submittedEvent)="onSubmit()"></code-editor-modal>
       }
     </section>
   </div>
