--- a/src/app/modules/account-settings/information/information.component.html
+++ b/src/app/modules/account-settings/information/information.component.html
@@ -4,37 +4,7 @@
       <div class="col-12">
         <div class="mb-1">
           <label for="accountTextarea">Bio</label>
-          <quill-editor class="full-width" [(ngModel)]="userInfo.bio">
-            <div quill-editor-toolbar>
-              <span class="ql-formats">
-                <button class="ql-bold" [title]="'Bold'"></button>
-                <button class="ql-italic" [title]="'italic'"></button>
-                <button class="ql-underline" [title]="'underline'"></button>
-              </span>
-              <span class="ql-formats">
-                <select class="ql-align" [title]="'Alignment'">
-                  <option selected></option>
-                  <option value="center"></option>
-                  <option value="right"></option>
-                  <option value="justify"></option>
-                </select>
-              </span>
-              <span class="ql-formats">
-                <button class="ql-list" value="ordered" type="button"></button>
-              </span>
-              <span class="ql-formats">
-                <button class="ql-link" value="ordered" type="button"></button>
-              </span>
-              <span class="ql-formats">
-                <button class="ql-formula" value="ordered" type="button"></button>
-                <button class="ql-code-block" value="ordered" type="button"></button>
-              </span>
-              <span class="ql-formats">
-                <button class="ql-clean" value="ordered" type="button"></button>
-              </span>
-            </div>
-
-          </quill-editor>
+          <textarea class="form-control" [(ngModel)]="userInfo.bio"></textarea>
 
           @if (errors?.bio) {
             <p class="text-danger">{{ errors.bio[0] }}</p>
