--- a/src/@core/components/header/header.component.html
+++ b/src/@core/components/header/header.component.html
@@ -66,6 +66,13 @@
             </a>
           </ul>
         </li>
+      } @else {
+        <li class="header-element">
+          <a style="width: initial;" aria-label="Logout" class="header-link-icon d-flex justify-content-between align-items-center" [routerLink]="Resources.Login">
+            <kep-icon name="login" size="small-2"></kep-icon>
+            {{ 'Login' | translate }}
+          </a>
+        </li>
       }
 
       <li class="header-element">
