--- a/src/app/modules/challenges/pages/challenge/challenge-countdown/challenge-countdown.component.html
+++ b/src/app/modules/challenges/pages/challenge/challenge-countdown/challenge-countdown.component.html
@@ -1,4 +1,4 @@
-<div class="card countdown bg-hapter-{{ challenge?.nextQuestion.question.chapter.id }}">
+<kep-card customClass="countdown bg-hapter-{{ challenge?.nextQuestion.question.chapter.id }}">
   <div class="card-header justify-content-center">
     <div class="chapter text-center">
       <div class="chapter-icon"><img src="{{ challenge?.nextQuestion.question.chapter.icon }}" alt=""></div>
@@ -23,4 +23,4 @@
       </ng-template>
     </ngx-countdown>
   </div>
-</div>
+</kep-card>
