--- a/src/app/modules/challenges/pages/user-statistics/section-profile/section-profile.component.html
+++ b/src/app/modules/challenges/pages/user-statistics/section-profile/section-profile.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<kep-card>
   @if (isLoading) {
     <div [style.height.px]="300">
       <spinner></spinner>
@@ -57,4 +57,4 @@
       }
     </div>
   }
-</div>
+</kep-card>
