--- a/src/app/modules/challenges/pages/user-statistics/section-rating-changes/section-rating-changes.component.html
+++ b/src/app/modules/challenges/pages/user-statistics/section-rating-changes/section-rating-changes.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<kep-card>
   @if (isLoading) {
     <div [style.height.px]="300">
       <spinner></spinner>
@@ -19,4 +19,4 @@
       </div>
     </div>
   }
-</div>
+</kep-card>
