--- a/src/app/modules/challenges/components/challenge-results-card/challenge-results-card.component.html
+++ b/src/app/modules/challenges/components/challenge-results-card/challenge-results-card.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<kep-card>
   <div class="card-header">
     <div class="row full-width">
       <div class="col p-0 d-flex align-items-center justify-content-center">
@@ -61,4 +61,4 @@
       }
     </div>
   </div>
-</div>
+</kep-card>
