--- a/src/app/modules/challenges/pages/challenge/challenge.component.html
+++ b/src/app/modules/challenges/pages/challenge/challenge.component.html
@@ -20,7 +20,7 @@
   <div *swalPortal>
     <div class="mb-2 d-flex justify-content-center">
       <div class="text-center">
-        <div class="avatar avatar-lg badge-light-primary badge-glow">
+        <div class="avatar avatar-lg bg-light-transparent">
           <div class="avatar-content" ngbTooltip="{{ 'Challenges' | translate }}">
             <i class="font-medium-3" data-feather="zap"></i>
           </div>
@@ -36,11 +36,11 @@
 
     <div class="mt-1 mb-2 d-flex justify-content-center">
       <div class="text-center">
-        <span class="badge me-25 badge-glow bg-primary" ngbTooltip="{{ 'Time' | translate }}">
+        <span class="badge me-1 bg-primary" ngbTooltip="{{ 'Time' | translate }}">
           <i data-feather="clock"></i>
           {{ challenge.timeSeconds }}
         </span>
-        <span class="badge badge-glow bg-primary" ngbTooltip="{{ 'Questions' | translate }}">
+        <span class="badge bg-primary" ngbTooltip="{{ 'Questions' | translate }}">
           <i data-feather="activity"></i>
           {{ challenge.questionsCount }}
         </span>
@@ -50,20 +50,20 @@
     <div class="mt-2 mb-2 d-flex justify-content-between">
       <div class="text-center">
         <challenges-user-view [user]="challenge.playerFirst"></challenges-user-view>
-        <span class="ms-1 mt-1 badge badge-light-{{ challenge.playerFirst.rankTitle | challengesRankColor }}">
+        <span class="ms-1 mt-1 badge bg-{{ challenge.playerFirst.rankTitle | challengesRankColor }}-transparent">
           {{ challenge.playerFirst.rating }}
         </span>
       </div>
       <div class="text-center">
         <challenges-user-view [user]="challenge.playerSecond"></challenges-user-view>
-        <span class="ms-2 mt-1 badge badge-light-{{ challenge.playerSecond.rankTitle | challengesRankColor }}">
+        <span class="ms-2 mt-1 badge bg-{{ challenge.playerSecond.rankTitle | challengesRankColor }}-transparent">
           {{ challenge.playerSecond.rating }}
         </span>
       </div>
     </div>
 
     <div class="d-flex justify-content-center">
-      <button (click)="startSwal.close()" class="btn btn-relief-success">
+      <button (click)="startSwal.close()" class="btn btn-success-light">
         {{ 'Start' | translate }}
       </button>
     </div>
@@ -77,7 +77,7 @@
   <div *swalPortal>
     <div class="mb-2 d-flex justify-content-center">
       <div class="text-center">
-        <div class="avatar avatar-lg bg-light-primary badge-glow">
+        <div class="avatar avatar-rounded avatar-lg bg-primary-transparent badge-glow">
           <div class="avatar-content" ngbTooltip="{{ 'Challenges' | translate }}">
             <i class="font-medium-3" data-feather="zap"></i>
           </div>
@@ -93,11 +93,11 @@
 
     <div class="mt-1 mb-2 d-flex justify-content-center">
       <div class="text-center">
-        <span class="badge me-25 badge-glow bg-primary" ngbTooltip="{{ 'Time' | translate }}">
+        <span class="badge me-1 bg-primary" ngbTooltip="{{ 'Time' | translate }}">
           <i data-feather="clock"></i>
           {{ challenge.timeSeconds }}
         </span>
-        <span class="badge badge-glow bg-primary" ngbTooltip="{{ 'Questions' | translate }}">
+        <span class="badge bg-primary" ngbTooltip="{{ 'Questions' | translate }}">
           <i data-feather="activity"></i>
           {{ challenge.questionsCount }}
         </span>
@@ -109,7 +109,7 @@
         <div class="text-center">
           <challenges-user-view [user]="challenge.playerFirst"></challenges-user-view>
           <span
-            class="ms-1 me-25 mt-2 badge badge-glow badge-{{ challenge.playerFirst.newRankTitle | challengesRankColor }}">
+            class="ms-1 me-1 mt-2 badge bg-{{ challenge.playerFirst.newRankTitle | challengesRankColor }}-transparent">
             {{ challenge.playerFirst.newRating }}
           </span>
           <span [ngClass]="{
@@ -142,8 +142,8 @@
           <span [ngClass]="{
             'bg-danger': challenge.playerFirst.result < challenge.playerSecond.result,
             'bg-success': challenge.playerFirst.result > challenge.playerSecond.result,
-            'badge-secondary': challenge.playerFirst.result == challenge.playerSecond.result
-          }" class="badge badge-result badge-glow">
+            'bg-secondary': challenge.playerFirst.result == challenge.playerSecond.result
+          }" class="badge badge-result">
             {{ challenge.playerFirst.result }}
           </span>
         </div>
@@ -152,13 +152,13 @@
         <div class="text-center">
           <challenges-user-view [user]="challenge.playerSecond"></challenges-user-view>
           <span
-            class="ms-2 me-25 mt-2 badge badge-glow badge-{{ challenge.playerSecond.newRankTitle | challengesRankColor }}">
+            class="ms-2 me-25 mt-2 badge badge-glow bg-{{ challenge.playerSecond.newRankTitle | challengesRankColor }}-transparent">
             {{ challenge.playerSecond.newRating }}
           </span>
           <span [ngClass]="{
             'bg-success': challenge.playerSecond.delta > 0,
             'bg-danger': challenge.playerSecond.delta < 0,
-            'badge-secondary': challenge.playerSecond.delta == 0
+            'bg-secondary': challenge.playerSecond.delta == 0
           }" class="badge badge-glow mb-1">
             <i [data-feather]="'trending-up'"></i>
             {{ challenge.playerSecond.delta }}
@@ -194,7 +194,7 @@
     </div>
 
     <div class="d-flex justify-content-center">
-      <button (click)="finishSwal.close()" class="btn btn-relief-info">
+      <button (click)="finishSwal.close()" class="btn btn-outline-info">
         {{ 'OK' | translate }}
       </button>
     </div>
