--- a/src/app/modules/challenges/pages/challenge/question-card/question-card.component.html
+++ b/src/app/modules/challenges/pages/challenge/question-card/question-card.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<kep-card>
   <div class="card-header font-medium-2 justify-content-center text-white p-25 bg-chapter-{{ question.chapter.id }}"
        style="box-shadow: none !important;">
     #{{ question.number }}
@@ -20,12 +20,15 @@
               'col-6': question.options.length != 3
             }">
               <div
-                class="card cursor-pointer"
+                style="cursor:pointer;"
                 (click)="singleRadio=option.id"
                 [class]="singleRadio == option.id ? ('text-white bg-chapter-' + question.chapter.id) : 'text-dark'">
-                <div class="card-body font-medium-4 mb-0 d-flex align-items-center justify-content-center text-center">
-                  {{ option.option }}
-                </div>
+                <kep-card>
+                  <div
+                    class="card-body font-medium-4 mb-0 d-flex align-items-center justify-content-center text-center">
+                    {{ option.option }}
+                  </div>
+                </kep-card>
               </div>
             </div>
           }
@@ -207,6 +210,6 @@
       {{ 'Check' | translate }}
     </button>
   </div>
-</div>
+</kep-card>
 
 <ng-select-css/>
