--- a/src/app/modules/contests/pages/rating/rating.component.html
+++ b/src/app/modules/contests/pages/rating/rating.component.html
@@ -24,7 +24,7 @@
                 <contestant-view [user]="contestsRating"></contestant-view>
               </td>
               <td class="text-dark text-center">
-                <span class="badge bg-outline-primary">
+                <span class="badge bg-primary">
                   {{ contestsRating.contestantsCount }}
                 </span>
               </td>
