--- a/src/app/modules/home/profile-section/profile-section.component.html
+++ b/src/app/modules/home/profile-section/profile-section.component.html
@@ -46,7 +46,7 @@
             <span class="badge bg-primary">
               {{ userRatings.problemsSolved }}
             </span>
-            <span class="badge ms-1 bg-light-success">
+            <span class="badge ms-1 bg-success-transparent">
               {{ userRatings.problemsRating }}
             </span>
           </div>
