--- a/src/app/modules/problems/pages/problems/sections/section-problems-list/problem-card/problem-card.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-problems-list/problem-card/problem-card.component.html
@@ -44,7 +44,7 @@
 
       <div class="meta">
         @if (problem.hasSolution) {
-          <span class="badge badge-pill bg-light-success">
+          <span class="badge badge-pill bg-success-transparent">
             <i [data-feather]="'exists' | iconName" class="text-success" [size]="'16px'"></i>
             {{ 'Solution' | translate }}
           </span>
