--- a/src/app/modules/contests/components/contest-card/contest-card/contest-card.component.html
+++ b/src/app/modules/contests/components/contest-card/contest-card/contest-card.component.html
@@ -77,7 +77,7 @@
 
   <div class="card-footer justify-content-between d-flex">
     <div class="meta-info text-center">
-      <span class="badge badge-glow me-1 bg-primary">
+      <span class="badge badge-glow me-1">
         <i data-feather="user"></i>
         @if (contest.status == -1) {
           <span ngbTooltip="{{ 'Registrants' | translate }}">
@@ -90,11 +90,11 @@
           </span>
         }
       </span>
-      <span class="badge badge-glow me-1 bg-primary" ngbTooltip="{{ 'Problems' | translate }}">
+      <span class="badge badge-glow me-1" ngbTooltip="{{ 'Problems' | translate }}">
         <i [data-feather]="'problem' | iconName"></i>
         {{ contest.problemsCount }}
       </span>
-      <span class="badge badge-glow bg-primary">
+      <span class="badge badge-glow">
         {{ contest.type }}
       </span>
     </div>
