blog detail page ui changes

--- a/src/app/modules/blog/post-detail/post-detail.component.html
+++ b/src/app/modules/blog/post-detail/post-detail.component.html
@@ -1,52 +1,65 @@
 <div class="content-wrapper container-lg p-0">
   <div class="content-body">
     <kep-card>
-      <div class="card-body">
-        <div class="post-header">
-          <h1 class="post-title text-dark">{{ blogPost.title }}</h1>
-          <div class="post-image">
-            <img src="{{ blogPost.image }}" alt="post-image">
-          </div>
-          <div class="post-meta-info d-flex justify-content-between">
-            <div class="media d-flex">
-              <img src="{{ blogPost.author.avatar }}" alt="profile">
-              <div class="media-body">
-                <h5>
-                  <user-popover [textColor]="'dark'" [username]="blogPost.author.username"></user-popover>
-                </h5>
-                <p>{{ blogPost.created }}</p>
-                <div class="meta-icon text-dark">
-                  <i [data-feather]="'view' | iconName"></i>
-                  {{ blogPost.views }}
-                </div>
-              </div>
+      <a href="javascript:void(0);">
+        <img [src]="blogPost.image" alt="..." class="card-img rounded-0 blog-details-img p-3">
+      </a>
+      <div class="card-body pb-2">
+        <p class="fs-40 fw-semibold mb-1">
+          {{ blogPost.title }}
+        </p>
+        <div class="d-sm-flex align-items-center justify-content-center">
+          <div class="d-flex align-items-center flex-fill">
+            <span class="avatar avatar-md avatar-rounded me-3">
+              <img [src]="blogPost.author.avatar" alt="">
+            </span>
+            <div>
+              <p class="mb-0 fw-medium">
+                <user-popover [username]="blogPost.author.username"/> -
+                <span class="fs-11 text-muted fw-normal">
+                  <i class="fe fe-calendar"></i>
+                  {{ blogPost.created }}
+                </span>
+              </p>
+              <p class="mb-0 text-muted"></p>
             </div>
+          </div>
+        </div>
+      </div>
+      <div class="card-body">
+        <mathjax [content]="blogPost.body"></mathjax>
+      </div>
+      <div class="card-body border-top border-block-start-dashed">
+        <div class="d-sm-flex d-block align-items-center justify-content-between">
+          <div class="d-flex align-items-cener">
+            <span class="badge bg-success-transparent me-3">
+              <i class="ri-thumb-up-line me-1 align-middle d-inline-block"></i>
+              {{ blogPost.likesCount }} {{ 'Likes' | translate }}
+            </span>
+            <span class="badge bg-info-transparent me-3">
+              <i class="ri-chat-4-line me-1 align-middle d-inline-block"></i>
+              {{ blogPost.commentsCount }} {{ 'Comments' | translate }}
+            </span>
+            <span class="badge bg-warning-transparent me-3">
+              <i class="me-1" [data-feather]="'view' | iconName"></i>
+              {{ blogPost.views }} {{ 'Views' | translate }}
+            </span>
+          </div>
+          <div class="btn-list mt-sm-0 mt-2">
+            <button (click)="like()" class="btn btn-sm btn-primary-light" data-bs-toggle="tooltip" ngbTooltip="Like" placement="top"><i
+              class="ri-thumb-up-line"></i> Like
+            </button>
+            <button class="btn btn-sm btn-primary-light" data-bs-toggle="tooltip" ngbTooltip="Share" placement="top"><i
+              class="ri-share-line"></i> Share
+            </button>
+            <button class="btn btn-sm btn-secondary-light"><i
+              class="ri-chat-4-line me-1 align-middle d-inline-block"></i>Comment
+            </button>
           </div>
         </div>
       </div>
     </kep-card>
 
-    <kep-card>
-      <div class="card-body">
-        <mathjax [content]="blogPost.body"></mathjax>
-      </div>
-    </kep-card>
-
-    <div class="post-tags mt-1">
-      @for (tag of blogPost.tags; track tag) {
-        <span class="badge bg-primary mb-1">{{ tag }}</span>
-      }
-    </div>
-
-    <div class="post-dynamic-meta mt-1 mb-2">
-      <button class="btn btn-danger round btn-sm" (click)="like()">
-        <kep-icon class="" name="heart"></kep-icon>
-        <span class="btn-text-inner ps-1">{{ blogPost.likesCount }}</span>
-      </button>
-    </div>
-
-    <comments [blogPost]="blogPost"></comments>
-
-    <!--    <quill-css></quill-css>-->
+    <comments [blogPost]="blogPost"/>
   </div>
 </div>
