--- a/src/app/modules/blog/post-detail/comments/comments.component.html
+++ b/src/app/modules/blog/post-detail/comments/comments.component.html
@@ -1,67 +1,64 @@
-<kep-card>
-  <div class="card-header">
-    <div class="card-title">
-      {{ 'Comments' | translate }}
-      <span class="comment-count">({{ comments.length }})</span>
-    </div>
-  </div>
+<h3>
+  {{ 'Comments' | translate }}
+  <span class="comment-count">({{ comments.length }})</span>
+</h3>
 
-  <div class="card-body" *ngIf="comments?.length > 0">
-    @for (comment of comments; track comment.id) {
-      <div
-        [@fadeInOnEnter]
-        [@fadeOutOnLeave]
-        style="border-radius: 5px;"
-        [ngClass]="{'bg-light-secondary': comment.username == currentUser?.username }"
-      >
-        <div class="d-flex pt-1 mb-4 ps-1">
-          <img class="avatar avatar-rounded" [src]="comment.userAvatar" alt="pic1">
-          <div class="flex-grow-1">
-            <div class="row ps-1">
-              <h4 class="d-flex-heading text-dark">
-                <user-popover [username]="comment.username"></user-popover>
-                ,
-              </h4>
-              <p class="meta-time-date ps-1">{{ comment.created }}</p>
-            </div>
-            <h6 class="comment">
-              <mathjax [content]="comment.body"></mathjax>
-            </h6>
-            <div class="d-flex-notation pb-1">
-              @if (comment.username != currentUser?.username) {
-                <button
-                  (click)="like($index)"
-                  class="me-1 btn btn-sm round btn-relief-success"
-                >
-                  <kep-icon name="like" class=""></kep-icon>
-                  @if (comment.likes > 0) {
-                    <span class="ms-1">{{ comment.likes }}</span>
-                  }
-                </button>
-              }
-              @if (0) {
-                <button
-                  class="me-1 btn btn-sm round btn-relief-secondary"
-                >
-                  <i data-feather="message-square"></i>
-                </button>
-              }
-              @if (currentUser?.isSuperuser) {
-                <button (click)="deleteComment($index)" class="btn btn-sm round btn-relief-dark">
-                  <i data-feather="x"></i>
-                </button>
-              }
-            </div>
-          </div>
+@for (comment of comments; track comment.id) {
+  <kep-card>
+    <div class="card-body">
+      <div class="d-flex align-items-center mb-3">
+        <span class="avatar avatar-md avatar-rounded me-3 flex-shrink-0">
+          <img [src]="comment.userAvatar" alt="">
+        </span>
+        <div>
+          <p class="mb-0 fw-semibold fs-14 text-primary">
+            {{ comment.username }}
+          </p>
+        </div>
+        <div class="ms-auto">
+          <span class="badge fs- 10bg-light text-fixed-white">
+            {{ comment.created }}
+          </span>
         </div>
       </div>
-    }
+      <div class="d-flex">
+        <span class="me-4"><i class="ri-double-quotes-l fs-30 op-1"></i></span>
+        <mathjax [content]="comment.body"/>
+      </div>
+    </div>
+    <div class="card-footer">
+      <div class="d-flex align-items-center justify-content-between">
+        <div class="float-end fs-12 fw-semibold text-muted text-end">
+          @if (comment.username != currentUser?.username) {
+            <button
+              (click)="like($index)"
+              class="btn btn-primary-light me-2">
+              <i class="ri-thumb-up-line align-bottom me-1 d-inline-flex"></i>
+              @if (comment.likes > 0) {
+                <span class="ms-1">{{ comment.likes }}</span>
+              }
+            </button>
+          }
+          @if (currentUser?.isSuperuser) {
+            <button (click)="deleteComment($index)" class="btn btn-danger-light">
+              <i data-feather="x"></i>
+            </button>
+          }
+        </div>
+      </div>
+    </div>
+  </kep-card>
+}
+
+<kep-card *ngIf="currentUser">
+  <div class="card-header">
+    <h4 class="mb-1">{{ 'WriteComment' | translate }}</h4>
   </div>
 
-  <div class="card-footer">
-    <h4 class="mb-1">{{ 'WriteComment' | translate }}</h4>
-    <angular-editor [(ngModel)]="comment" [config]="config"/>
+  <div class="card-body">
+    <textarea class="form-control" [(ngModel)]="comment"></textarea>
+    <!--    <angular-editor [(ngModel)]="comment" [config]="config"/>-->
 
-    <button (click)="submit()" class="btn btn-primary mb-1 mt-1">{{ 'Send' | translate }}</button>
+    <button (click)="submit()" class="btn btn-primary mb-1 mt-3">{{ 'Submit' | translate }}</button>
   </div>
 </kep-card>
