blog detail ui fixs

--- a/src/app/modules/blog/post-detail/post-detail.component.html
+++ b/src/app/modules/blog/post-detail/post-detail.component.html
@@ -28,6 +28,10 @@
       </div>
       <div class="card-body">
         <mathjax [content]="blogPost.body"></mathjax>
+
+        @for (tag of blogPost.tags; track tag) {
+          <span class="badge bg-secondary fs-12 me-1">{{ tag }}</span>
+        }
       </div>
       <div class="card-body border-top border-block-start-dashed">
         <div class="d-sm-flex d-block align-items-center justify-content-between">
