post detail img fix

--- a/src/app/modules/blog/post-detail/post-detail.component.scss
+++ b/src/app/modules/blog/post-detail/post-detail.component.scss
@@ -1,138 +1,7 @@
 @import 'styles/kep-imports';
 
-.post-header {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  max-width: 1280px;
-  margin: auto;
-
-  .post-title {
-    margin-top: 2rem;
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
-    font-size: 3rem;
-    text-transform: uppercase;
-    margin-right: 1rem;
-  }
-
-  .post-image {
-    z-index: 1;
-    height: 200px !important;
-    object-fit: contain;
-    height: 100%;
-    text-align: left;
-
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-    }
-  }
-
-  .post-meta-info {
-    z-index: 1;
-    width: 100%;
-    margin-top: 2rem;
-
-    .media {
-      border-bottom: none !important;
-
-      img {
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        margin-right: 12px;
-      }
-    }
-  }
-}
-
-
-@include media-breakpoint-down(md) {
-  .post-header {
-    grid-template-columns: 1fr 1fr;
-    padding: 0;
-
-    .post-title {
-      font-size: 2rem;
-    }
-  }
-
-  .post-content {
-    margin-top: 18rem;
-  }
-}
-
-@include media-breakpoint-down(sm) {
-  .post-header {
-    grid-template-columns: 1fr;
-    padding: 0 2rem;
-    margin-left: 3rem;
-
-    .post-title {
-      margin-bottom: 2rem;
-      margin-top: 2rem;
-      font-size: 1.8rem;
-      margin-right: 0;
-    }
-
-    .post-image {
-      height: 150px !important;
-      margin-top: 1rem;
-      margin-bottom: 2rem;
-    }
-  }
-}
-
-@include media-breakpoint-down(xs) {
-  .post-header {
-    margin-left: 0rem;
-
-    .post-image {
-      height: 100px !important;
-    }
-
-    .post-meta-info {
-      zoom: 90%;
-    }
-  }
-}
-
-::ng-deep .post-content {
-  z-index: 1;
-  padding: 0rem 20rem 0rem 20rem;
-
-  p {
-    color: #404041;
-    font-size: 15px;
-    line-height: 25px;
-  }
-
+app-post-detail {
   img {
-    max-width: 100%;
-    border-radius: 8px;
-  }
-
-  .full-width {
-    width: 100%;
-  }
-}
-
-.post-info {
-  max-width: 1152px;
-  margin: 0 auto;
-  padding: 48px;
-  padding-top: 15px;
-}
-
-@media (max-width: 991px) {
-  .post-content,
-  .post-info {
-    padding: 24px 26px;
-  }
-
-  .post-content {
-    padding-bottom: 0;
+    max-width: 100% !important;
   }
 }
