--- a/src/app/shared/components/kep-delta/kep-delta.component.html
+++ b/src/app/shared/components/kep-delta/kep-delta.component.html
@@ -4,7 +4,7 @@
     {{ value }}
   </span>
 } @else if (value == 0) {
-  <span class="badge badge-light-secondary">
+  <span class="badge bg-secondary-transparent">
     <kep-icon name="arrow-up-down" size="small-2"></kep-icon>
     0
   </span>
